[package]
name = "instagram-to-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
log = "0.4"
dotenvy = "0.15"
hyper = { version = "0.14", features = ["server", "http1"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
